Finish my homework 1 with my Docker setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 build-pseudo-distributed/downloads/*
 src/*/target/*
 
+# my private submission
+src/*-submission
+src/io/hw*/
+
 # eclipse jdtls language server
 src/*/.classpath
 src/*/.project
