--- a/build-pseudo-distributed/docker-compose.yml
+++ b/build-pseudo-distributed/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     ports:
       - 9870:9870 # namenode port
       - 8088:8088 # resource manager port
+      - 8042:8042 # yarn port
     volumes:
       - ../src/:/src/
