--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ src/*/target/*
 # my private submission
 src/*-submission
 # src/homework1
-src/homework2
+# src/homework2
 src/homework3
 src/io/hw*/
 private/*
