--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ src/*/target/*
 # src/homework1
 # src/homework2
 # src/homework3
-src/homework4
+# src/homework4
+src/homework5
 
 # my private submission
 
